# cma_trainer_plugin

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tune.sh
config/: trainer_config.yaml
mlagents_trainer_plugin/a2c/: a2c_3DBall.yaml
mlagents_trainer_plugin/ppo/: ppo_3DBall.yaml  ppo_optimizer.py  ppo_policy_network.py  ppo_trainer.py
src/cma_trainer_plugin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/mlagents_trainer_plugin/ppo/: ppo_trainer.py
