[project]
name = "cma_trainer_plugin"
version = "0.0.1"
authors = [
  { name="Akin, Nicholas", email="nicholasakin@gmail.com" },
]
description = "Custom Unity Trainer Plugin"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/nicholasakin/cma_trainer_plugin"
Issues = "https://github.com/nicholasakin/cma_trainer_plugin"
